# CMakeDemo

./: .gitignore  CMakeLists.txt  HelloUbuntu.sln  README.md
CMakeProjectDemoLinux/: CMakeLists.txt  CMakeProjectDemoLinux.cpp  CMakeProjectDemoLinux.h
CMakeProjectDemoLinux/libnn/nn/: nn.h
CMakeProjectDemoLinux/libnn/nn/network_impl/: cnn.h  dnn.h  rnn.h
CMakeProjectDemoLinux/libnn/nn_api/: nn_api.cpp  nn_api.h
CMakeProjectDemoLinux/network/: nn_api.h  researcher.cpp
HelloUbuntu/: HelloUbuntu.vcxproj  main.cpp
